remove errors for compilation (just add comments)